k8s/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: flask-service
  namespace: icanio
  
spec:
  type: NodePort
  selector:
    app: flask-app
  ports:
    - protocol: TCP
      port: 80
      targetPort: 8000
      nodePort: 30080
