k8s/networkpolicy.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: flask-network-policy
  namespace: icanio
spec:
  podSelector:
    matchLabels:
      app: flask-app
  policyTypes:
    - Ingress

  ingress:
    - from:
      - namespaceSelector:
          matchLabels:
            name: icanio
